# xenor-site

./: .gitignore  .gitmodules  Makefile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  sync-xenor-native.yml
app/: globals.css  layout.tsx  page.tsx
app/architecture/: page.tsx
app/components/: ChannelActivity.tsx  CommunicationPolicy.tsx  PresenceCard.tsx  PresenceGroup.tsx  PresenceHero.tsx  VerifiedBadge.tsx  gaea-site-chrome.tsx  gaea-subpage-manifesto.tsx  hero-wiremark.tsx  home-status-panel.tsx  home-xenor-logo-display.tsx  language-switcher.tsx  localized-link.tsx  (+2 more)
components/: About.tsx  ClientWrapper.tsx  Contract.tsx  EntryGate.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowToBuy.tsx  Marquee.tsx  Navbar.tsx  Roadmap.tsx  Security.tsx  Tokenomics.tsx
docs/: native-integration.md
lib/: constants.ts
xenor-native/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.rs
xenor-native/asm/kernels/: tick_hash.S
xenor-native/cpp/: CMakeLists.txt
xenor-native/cpp/include/: xenor_sim.h  xenor_types.h
xenor-native/cpp/src/: xenor_checksum.cpp  xenor_internal.hpp  xenor_math.cpp  xenor_sim.cpp  xenor_state.cpp
xenor-native/crates/xenor-cli/src/: main.rs
xenor-native/crates/xenor-native/src/: checksum.rs  ffi.rs  lib.rs  replay.rs  runtime.rs  snapshot.rs
xenor-native/mlang/haskell/: InvariantCheck.hs
xenor-native/python/tools/: analyze_replay.py  benchmark_report.py
xenor-native/tests/: determinism.rs  replay.rs
xenor-native/zig/alloc/: arena_alloc.zig
(+47 files in other folders)
